--- a/index.html
+++ b/index.html
@@ -18,27 +18,66 @@
   </head>
   <body>
     <div class="container">
-      <div id="opening" class="text-center mt-5">
-        <h1>Julia Hanlon Portfolio 2020</h1>
+      <div id="opening" class="text-center">
+        <h1 style="font-size: 6rem;">Portfolio No.02</h1>
+        <h4>© JEH / SUMMER 2020</h4>
       </div>
       <div id="portfolio" class="text-center mt-5">
-        <canvas class="projects"> </canvas>
-        <footer class="homeFooter">
-          <div class="footer_item">
-            <p class="text">Julia Hanlon Portfolio 2020</p>
-            <p class="text">
-              <a href="jhanlon289@gmail.com" target="_blank"
-                >jhanlon289@gmail.com</a
-              >
-            </p>
+        <div class="row">
+          <div class="col-4">
+            <img src="" alt="not working" />
           </div>
-          <div class="footer_item">
-            <p class="text">update: 05.21.2020</p>
+          <div class="col-4">
+            <h3>Games App</h3>
           </div>
-        </footer>
+        </div>
+        <div class="row">
+          <div class="col-4">
+            <img src="" alt="not working" />
+          </div>
+          <div class="col-4">
+            <h3>Weather App</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4">
+            <img src="" alt="not working" />
+          </div>
+          <div class="col-4">
+            <h3>Quiz</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4">
+            <img src="" alt="not working" />
+          </div>
+          <div class="col-4">
+            <h3>Architecture</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-4">
+            <img src="" alt="not working" />
+          </div>
+          <div class="col-4">
+            <h3>Games App</h3>
+          </div>
+        </div>
       </div>
     </div>
-
+    <footer id="footer">
+      <div class="footer_item">
+        <p class="text">Julia Hanlon Portfolio 2020</p>
+        <p class="text">
+          <a href="jhanlon289@gmail.com" target="_blank"
+            >jhanlon289@gmail.com</a
+          >
+        </p>
+      </div>
+      <div class="footer_item">
+        <p class="text">updated: 05.21.2020</p>
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
