--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
         <h1 style="font-size: 6rem;">Portfolio No.02</h1>
         <h4>© JEH / SUMMER 2020</h4>
       </div>
-      <div id="portfolio" class="text-center mt-5">
+      <div id="portfolio" class="mt-3">
+        <div class="top">
+          <h4>Julia Hanlon Portfolio</h4>
+        </div>
         <div class="row">
           <div class="col-4">
-            <img src="" alt="not working" />
+            <img src="./Assets/Images/gamesApp.PNG" alt="not working" />
           </div>
           <div class="col-4">
             <h3>Games App</h3>
@@ -33,7 +36,7 @@
         </div>
         <div class="row">
           <div class="col-4">
-            <img src="" alt="not working" />
+            <img src="./Assets/Images/weatherApp.PNG" alt="not working" />
           </div>
           <div class="col-4">
             <h3>Weather App</h3>
@@ -49,7 +52,7 @@
         </div>
         <div class="row">
           <div class="col-4">
-            <img src="" alt="not working" />
+            <img src="./Assets/Images/Dan Towers.JPG" alt="" />
           </div>
           <div class="col-4">
             <h3>Architecture</h3>
@@ -57,10 +60,10 @@
         </div>
         <div class="row">
           <div class="col-4">
-            <img src="" alt="not working" />
+            <img src="./Assets/Images/alpha2.PNG" alt="not working" />
           </div>
           <div class="col-4">
-            <h3>Games App</h3>
+            <h3>BIM</h3>
           </div>
         </div>
       </div>
@@ -76,6 +79,11 @@
       </div>
       <div class="footer_item">
         <p class="text">updated: 05.21.2020</p>
+        <p class="text">
+          <a href="https://www.linkedin.com/in/julia-hanlon-3193a336/"
+            >LinkedIn: Julia Hanlon</a
+          >
+        </p>
       </div>
     </footer>
     <script
