--- a/index.html
+++ b/index.html
@@ -17,20 +17,32 @@
     <title>Julia Hanlon</title>
   </head>
   <body>
+    <nav>
+      <div class="navbar">
+        <h4>Julia Hanlon Portfolio</h4>
+      </div>
+    </nav>
     <div class="container">
-      <div id="opening" class="text-center">
+      <section id="opening" class="text-center">
         <h1 style="font-size: 6rem;">Portfolio No.02</h1>
         <h4>© JEH / SUMMER 2020</h4>
-      </div>
-      <div id="portfolio" class="mt-3">
-        <div class="top">
-          <h4>Julia Hanlon Portfolio</h4>
+      </section>
+      <section id="portfolio" class="mt-5">
+        <div id="aboutme">
+          <div class="card">
+            <img id= "myPic" src="" alt="">
+          </div>
+        </div>
+        <div id="rowTitle" class="row">
+          <div class="col-4">
+            <h2>Web Development</h2>
+          </div>
         </div>
         <div class="row">
           <div class="col-4">
             <img src="./Assets/Images/gamesApp.PNG" alt="not working" />
           </div>
-          <div class="col-4">
+          <div class="col-5">
             <h3>Games App</h3>
           </div>
         </div>
@@ -38,35 +50,51 @@
           <div class="col-4">
             <img src="./Assets/Images/weatherApp.PNG" alt="not working" />
           </div>
-          <div class="col-4">
+          <div class="col-5">
             <h3>Weather App</h3>
+            <p>Open Weather API used to generate 5 day weather forecast based on user search.</p>
+          </div>
+        </div>
+        <div id="rowTitle" class="row">
+          <div class="col-4">
+            <h2>Architecture</h2>
           </div>
         </div>
         <div class="row">
           <div class="col-4">
-            <img src="" alt="not working" />
+            <img src="./Assets/Images/oraniumByThe Sea.PNG" alt="not working" />
           </div>
-          <div class="col-4">
-            <h3>Quiz</h3>
+          <div class="col-5">
+            <h3>Oranim By the Sea</h3>
+            <p> Senior housing and retail space, located in Oranim, Israel. 50,000
+              sq, currently under construction.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-4">
             <img src="./Assets/Images/Dan Towers.JPG" alt="" />
           </div>
-          <div class="col-4">
-            <h3>Architecture</h3>
+          <div class="col-5">
+            <h3>Dan Towers</h3>
+            <p><p>
+              Mixed use, 2013 - currently under construction, located in Bnei
+              Brak, Israel. 180,000 sq meters of office and retail space
+            </p></p>
           </div>
         </div>
         <div class="row">
           <div class="col-4">
             <img src="./Assets/Images/alpha2.PNG" alt="not working" />
           </div>
-          <div class="col-4">
-            <h3>BIM</h3>
+          <div class="col-5">
+            <h3>Alpha Tower</h3>
+            <p>
+              Mixed use - apartments, hotel, retail, kindergarten. Located in
+              Tel Aviv, ISrael. 35,000 sq, currently under construction.
+            </p>
           </div>
         </div>
-      </div>
+      </section>
     </div>
     <footer id="footer">
       <div class="footer_item">
@@ -78,7 +106,7 @@
         </p>
       </div>
       <div class="footer_item">
-        <p class="text">updated: 05.21.2020</p>
+        <p class="text">415-861-9032</p>
         <p class="text">
           <a href="https://www.linkedin.com/in/julia-hanlon-3193a336/"
             >LinkedIn: Julia Hanlon</a
