--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
     <footer id="footer">
       <div class="footer_item">
-        <p class="text">Julia Hanlon Portfolio 2020</p>
+        <p class="text"><a href="./Assets/Images/Julia_Hanlon_resume_2020-05-20.pdf">Julia Hanlon Resume</a></p>
         <p class="text">
           <a href="jhanlon289@gmail.com" target="_blank"
             >jhanlon289@gmail.com</a
