--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="row">
           <div class="col-4">
-            <img src="./Assets/Images/weatherApp.PNG" alt="not working" />
+            <img class = "image" src="./Assets/Images/weatherApp.PNG" alt="not working" />
           </div>
           <div class="col-5">
             <h3>Weather App</h3>
@@ -72,7 +72,7 @@
         </div>
         <div class="row">
           <div class="col-4">
-            <img src="./Assets/Images/Dan Towers.JPG" alt="" />
+            <img src="./Assets/Images/DTowers.PNG" alt="" />
           </div>
           <div class="col-5">
             <h3>Dan Towers</h3>
@@ -84,7 +84,7 @@
         </div>
         <div class="row">
           <div class="col-4">
-            <img src="./Assets/Images/alpha2.PNG" alt="not working" />
+            <img src="./Assets/Images/alpha.JPG" alt="not working" />
           </div>
           <div class="col-5">
             <h3>Alpha Tower</h3>
@@ -98,7 +98,7 @@
     </div>
     <footer id="footer">
       <div class="footer_item">
-        <p class="text"><a href="./Assets/Images/Julia_Hanlon_resume_2020-05-20.pdf">Julia Hanlon Resume</a></p>
+        <p class="text"><a href="./Assets/Images/Julia_Hanlon_resume_2020-05-20.pdf">Resume 2020</a></p>
         <p class="text">
           <a href="jhanlon289@gmail.com" target="_blank"
             >jhanlon289@gmail.com</a
@@ -108,8 +108,9 @@
       <div class="footer_item">
         <p class="text">415-861-9032</p>
         <p class="text">
+          <img src="./Assets/Images/linkedin_icon.png" height="20px" alt="">
           <a href="https://www.linkedin.com/in/julia-hanlon-3193a336/"
-            >LinkedIn: Julia Hanlon</a
+            >Julia Hanlon</a
           >
         </p>
       </div>
