--- a/index.html
+++ b/index.html
@@ -34,47 +34,47 @@
           </div>
         </div>
         <div id="rowTitle" class="row">
-          <div class="col-4">
+          <div class="col-md-4 col-sm-12">
             <h2>Web Development</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4 col-sm-12">
             <img src="./Assets/Images/gamesApp.PNG" alt="not working" />
           </div>
-          <div class="col-5">
+          <div class="col-md-5 col-sm-12">
             <h3>Games App</h3>
           </div>
         </div>
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4 col-sm-12">
             <img class = "image" src="./Assets/Images/weatherApp.PNG" alt="not working" />
           </div>
-          <div class="col-5">
+          <div class="col-md-5 col-sm-12">
             <h3>Weather App</h3>
             <p>Open Weather API used to generate 5 day weather forecast based on user search.</p>
           </div>
         </div>
         <div id="rowTitle" class="row">
-          <div class="col-4">
+          <div class="col-md-4 col-sm-12">
             <h2>Architecture</h2>
           </div>
         </div>
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4 col-sm-12">
             <img src="./Assets/Images/oraniumByThe Sea.PNG" alt="not working" />
           </div>
-          <div class="col-5">
+          <div class="col-md-5 col-sm-12">
             <h3>Oranim By the Sea</h3>
             <p> Senior housing and retail space, located in Oranim, Israel. 50,000
               sq, currently under construction.</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4 col-sm-12">
             <img src="./Assets/Images/DTowers.PNG" alt="" />
           </div>
-          <div class="col-5">
+          <div class="col-md-5 col-sm-12">
             <h3>Dan Towers</h3>
             <p><p>
               Mixed use, 2013 - currently under construction, located in Bnei
@@ -83,10 +83,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-4">
+          <div class="col-md-4 col-sm-12">
             <img src="./Assets/Images/alpha.JPG" alt="not working" />
           </div>
-          <div class="col-5">
+          <div class="col-md-5 col-sm-12">
             <h3>Alpha Tower</h3>
             <p>
               Mixed use - apartments, hotel, retail, kindergarten. Located in
