--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <nav>
-      <div class="navbar">
+      <div class="navbar mt-2">
         <h4>Julia Hanlon Portfolio</h4>
       </div>
     </nav>
@@ -30,41 +30,48 @@
       <section id="portfolio" class="mt-5">
         <div id="aboutme">
           <div class="card">
-            <img id= "myPic" src="" alt="">
+            <img id= "myPic" src="./Assets/Images/me.JPG" alt="">
+            <p id = "myInfo" >Hello, and welcome to my portfolio. I'm Julia Hanlon, a web developer and architect. I am currently a student at UC Berkeley studying full stack web development.</p>
           </div>
         </div>
         <div id="rowTitle" class="row">
           <div class="col-md-4 col-sm-12">
-            <h2>Web Development</h2>
+            <h2>WEB DEVELOPMENT</h2>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-12">
-            <img src="./Assets/Images/gamesApp.PNG" alt="not working" />
+            <a href="https://julhanlon.github.io/GroupProject1/" target="_blank"><img src="./Assets/Images/gamesApp.PNG" alt="not working" /></a>
           </div>
-          <div class="col-md-5 col-sm-12">
+          <div class="col-md-6 col-sm-12">
             <h3>Games App</h3>
+            <p>Website of 6 games to play while bored during quaratine. Uses three API calls, HTML, CSS, JQuery, and Bootstrap.</p>
+            <a href="https://github.com/julhanlon/GroupProject1" target="_blank"><img id = "git" src="./Assets/Images/github.png" alt=""></a>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-12">
-            <img class = "image" src="./Assets/Images/weatherApp.PNG" alt="not working" />
+            <a href="https://julhanlon.github.io/06-Weather-APP/"><img class = "image" src="./Assets/Images/weatherApp.PNG" alt="not working" /></a>
           </div>
-          <div class="col-md-5 col-sm-12">
+          <div class="col-md-6 col-sm-12">
             <h3>Weather App</h3>
-            <p>Open Weather API used to generate 5 day weather forecast based on user search.</p>
+            <p>Open Weather API used to generate 5 day weather forecast based on user search. Saves city search to local storage.</p>
+            <a href="https://github.com/julhanlon/06-Weather-APP" target="_blank"><img id = "git" src="./Assets/Images/github.png" alt=""></a>
           </div>
         </div>
+        <br>
+        <br>
+        <br>
         <div id="rowTitle" class="row">
           <div class="col-md-4 col-sm-12">
-            <h2>Architecture</h2>
+            <h2>ARCHITECTURE</h2>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-12">
             <img src="./Assets/Images/oraniumByThe Sea.PNG" alt="not working" />
           </div>
-          <div class="col-md-5 col-sm-12">
+          <div class="col-md-6 col-sm-12">
             <h3>Oranim By the Sea</h3>
             <p> Senior housing and retail space, located in Oranim, Israel. 50,000
               sq, currently under construction.</p>
@@ -74,7 +81,7 @@
           <div class="col-md-4 col-sm-12">
             <img src="./Assets/Images/DTowers.PNG" alt="" />
           </div>
-          <div class="col-md-5 col-sm-12">
+          <div class="col-md-6 col-sm-12">
             <h3>Dan Towers</h3>
             <p><p>
               Mixed use, 2013 - currently under construction, located in Bnei
@@ -86,7 +93,7 @@
           <div class="col-md-4 col-sm-12">
             <img src="./Assets/Images/alpha.JPG" alt="not working" />
           </div>
-          <div class="col-md-5 col-sm-12">
+          <div class="col-md-6 col-sm-12">
             <h3>Alpha Tower</h3>
             <p>
               Mixed use - apartments, hotel, retail, kindergarten. Located in
