added more projects

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <h2>WEB DEVELOPMENT</h2>
           </div>
         </div>
-        <div class="row">
+        <div id = "row" class="row">
           <div class="col-md-4 col-sm-12">
-            <a href="https://julhanlon.github.io/GroupProject1/" target="_blank"><img src="./Assets/Images/gamesApp.PNG" alt="not working" /></a>
+            <a href="https://julhanlon.github.io/GroupProject1/" target="_blank"><img class = "portImg" src="./Assets/Images/gamesApp.PNG" alt="not working" /></a>
           </div>
           <div class="col-md-6 col-sm-12">
             <h3>Games App</h3>
@@ -49,14 +49,24 @@
             <a href="https://github.com/julhanlon/GroupProject1" target="_blank"><img id = "git" src="./Assets/Images/github.png" alt=""></a>
           </div>
         </div>
-        <div class="row">
+        <div id = "row" class="row">
           <div class="col-md-4 col-sm-12">
-            <a href="https://julhanlon.github.io/06-Weather-APP/"><img class = "image" src="./Assets/Images/weatherApp.PNG" alt="not working" /></a>
+            <a href="https://julhanlon.github.io/06-Weather-APP/"><img class = "portImg" src="./Assets/Images/weatherApp.PNG" alt="not working" /></a>
           </div>
           <div class="col-md-6 col-sm-12">
             <h3>Weather App</h3>
             <p>Open Weather API used to generate 5 day weather forecast based on user search. Saves city search to local storage.</p>
             <a href="https://github.com/julhanlon/06-Weather-APP" target="_blank"><img id = "git" src="./Assets/Images/github.png" alt=""></a>
+          </div>
+        </div>
+        <div id = "row" class="row">
+          <div class="col-md-4 col-sm-12">
+            <a href="https://julhanlon.github.io/05-Scheduler/"><img class = "portImg" src="./Assets/Images/WorkDayScheduler.PNG" alt="not working" /></a>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <h3>Daily Scheduler</h3>
+            <p>Open Weather API used to generate 5 day weather forecast based on user search. Saves city search to local storage.</p>
+            <a href="https://github.com/julhanlon/05-Scheduler" target="_blank"><img id = "git" src="./Assets/Images/github.png" alt=""></a>
           </div>
         </div>
         <br>
@@ -67,9 +77,9 @@
             <h2>ARCHITECTURE</h2>
           </div>
         </div>
-        <div class="row">
+        <div id = "row" class="row">
           <div class="col-md-4 col-sm-12">
-            <img src="./Assets/Images/oraniumByThe Sea.PNG" alt="not working" />
+            <img class = "portImg" src="./Assets/Images/oraniumByThe Sea.PNG" alt="not working" />
           </div>
           <div class="col-md-6 col-sm-12">
             <h3>Oranim By the Sea</h3>
@@ -77,9 +87,9 @@
               sq, currently under construction.</p>
           </div>
         </div>
-        <div class="row">
+        <div id = "row" class="row">
           <div class="col-md-4 col-sm-12">
-            <img src="./Assets/Images/DTowers.PNG" alt="" />
+            <img class = "portImg" src="./Assets/Images/DTowers.PNG" alt="" />
           </div>
           <div class="col-md-6 col-sm-12">
             <h3>Dan Towers</h3>
@@ -89,15 +99,39 @@
             </p></p>
           </div>
         </div>
-        <div class="row">
+        <div id = "row" class="row">
           <div class="col-md-4 col-sm-12">
-            <img src="./Assets/Images/alpha.JPG" alt="not working" />
+            <img class = "portImg" src="./Assets/Images/alpha.JPG" alt="not working" />
           </div>
           <div class="col-md-6 col-sm-12">
             <h3>Alpha Tower</h3>
             <p>
               Mixed use - apartments, hotel, retail, kindergarten. Located in
-              Tel Aviv, ISrael. 35,000 sq, currently under construction.
+              Tel Aviv, Israel. 35,000 sq, currently under construction.
+            </p>
+          </div>
+        </div>
+        <div id = "row" class="row">
+          <div class="col-md-4 col-sm-12">
+            <img class = "portImg" src="./Assets/Images/Hadera.JPG" alt="not working" />
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <h3>Hadera Courthouse</h3>
+            <p>
+              Mixed use - apartments, hotel, retail, kindergarten. Located in
+              Hadera, Israel. 35,000 sq, currently under construction.
+            </p>
+          </div>
+        </div>
+        <div id = "row" class="row">
+          <div class="col-md-4 col-sm-12">
+            <img class = "portImg" src="./Assets/Images/EliteTowers.PNG" alt="not working" />
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <h3>Elite Towers</h3>
+            <p>
+              Mixed use - apartments, hotel, retail, kindergarten. Located in
+              Tel Aviv, Israel. 35,000 sq, currently under construction.
             </p>
           </div>
         </div>
