--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </head>
   <body>
     <nav>
-      <div class="navbar mt-2">
-        <h4>Julia Hanlon Portfolio</h4>
+      <div class="navbar mt-3">
+        <h3>Julia Hanlon Portfolio</h3>
       </div>
     </nav>
     <div class="container">
@@ -31,12 +31,14 @@
         <div id="aboutme">
           <div class="card">
             <img id= "myPic" src="./Assets/Images/me.JPG" alt="">
-            <p id = "myInfo" >Hello, and welcome to my portfolio. I'm Julia Hanlon, a web developer and architect. I am currently a student at UC Berkeley studying full stack web development.</p>
+            <p id = "myInfo" >Hi and welcome to my portfolio. I'm Julia Hanlon, a BIM expert, architect, and future web developer. I am currently a student at UC Berkeley studying full stack web development.</p>
+            <br>
+            <p id = "myInfo">I'm originally from St. Louis, MO. I moved to San Francisco a year and a half ago after living in Tel Aviv for 7 years.</p>
           </div>
         </div>
         <div id="rowTitle" class="row">
           <div class="col-md-4 col-sm-12">
-            <h2>WEB DEVELOPMENT</h2>
+            <h2 class = "text-center">WEB DEVELOPMENT</h2>
           </div>
         </div>
         <div id = "row" class="row">
@@ -65,7 +67,7 @@
           </div>
           <div class="col-md-6 col-sm-12">
             <h3>Daily Scheduler</h3>
-            <p>Open Weather API used to generate 5 day weather forecast based on user search. Saves city search to local storage.</p>
+            <p>Work Day Scheduler where you can add daily tasks and they are saved to your local storage. Time slots are colored according to the current hour.</p>
             <a href="https://github.com/julhanlon/05-Scheduler" target="_blank"><img id = "git" src="./Assets/Images/github.png" alt=""></a>
           </div>
         </div>
@@ -73,36 +75,35 @@
         <br>
         <br>
         <div id="rowTitle" class="row">
-          <div class="col-md-4 col-sm-12">
-            <h2>ARCHITECTURE</h2>
+          <div class="col-md-3 col-sm-12"></div>
+          <div class="col-md-3 col-sm-12"></div>
+          <div class="col-md-2 col-sm-12">
+            <h2 id = "arch" >  ARCHITECTURE</h2>
           </div>
         </div>
         <div id = "row" class="row">
+          <div class="col-md-6 col-sm-12">
+            <h3>Oranim By the Sea</h3>
+            <p> Senior housing and retail space, located in Oranim, Israel. Architecture was modeled in Revit. 50,000
+              sq, currently under construction.</p>
+          </div>
           <div class="col-md-4 col-sm-12">
             <img class = "portImg" src="./Assets/Images/oraniumByThe Sea.PNG" alt="not working" />
           </div>
-          <div class="col-md-6 col-sm-12">
-            <h3>Oranim By the Sea</h3>
-            <p> Senior housing and retail space, located in Oranim, Israel. 50,000
-              sq, currently under construction.</p>
-          </div>
         </div>
-        <div id = "row" class="row">
-          <div class="col-md-4 col-sm-12">
-            <img class = "portImg" src="./Assets/Images/DTowers.PNG" alt="" />
-          </div>
+        <div class="row">
           <div class="col-md-6 col-sm-12">
             <h3>Dan Towers</h3>
             <p><p>
               Mixed use, 2013 - currently under construction, located in Bnei
-              Brak, Israel. 180,000 sq meters of office and retail space
+              Brak, Israel. Architecture and all systems were created in Revit. 180,000 sq meters of office and retail space
             </p></p>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <img class = "portImg" src="./Assets/Images/DTowers.PNG" alt="" />
           </div>
         </div>
         <div id = "row" class="row">
-          <div class="col-md-4 col-sm-12">
-            <img class = "portImg" src="./Assets/Images/alpha.JPG" alt="not working" />
-          </div>
           <div class="col-md-6 col-sm-12">
             <h3>Alpha Tower</h3>
             <p>
@@ -110,29 +111,31 @@
               Tel Aviv, Israel. 35,000 sq, currently under construction.
             </p>
           </div>
+          <div class="col-md-4 col-sm-12">
+            <img class = "portImg" src="./Assets/Images/alpha.JPG" alt="not working" />
+          </div>
         </div>
         <div id = "row" class="row">
-          <div class="col-md-4 col-sm-12">
-            <img class = "portImg" src="./Assets/Images/Hadera.JPG" alt="not working" />
-          </div>
           <div class="col-md-6 col-sm-12">
             <h3>Hadera Courthouse</h3>
             <p>
-              Mixed use - apartments, hotel, retail, kindergarten. Located in
-              Hadera, Israel. 35,000 sq, currently under construction.
+              Courthouse in Hadera, Israel. 8,000 sq. Architecture and all systems modeled in Revit. Completed in 2020
             </p>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <img class = "portImg" src="./Assets/Images/Hadera.JPG" alt="not working" />
           </div>
         </div>
         <div id = "row" class="row">
-          <div class="col-md-4 col-sm-12">
-            <img class = "portImg" src="./Assets/Images/EliteTowers.PNG" alt="not working" />
-          </div>
           <div class="col-md-6 col-sm-12">
             <h3>Elite Towers</h3>
             <p>
-              Mixed use - apartments, hotel, retail, kindergarten. Located in
-              Tel Aviv, Israel. 35,000 sq, currently under construction.
+              Mixed use - apartments, hotel, retail. Fully BIM project. Located in
+              Ramat Gan, Israel. 100,000 sq, currently under construction.
             </p>
+          </div>
+          <div class="col-md-4 col-sm-12">
+            <img class = "portImg" src="./Assets/Images/EliteTowers.PNG" alt="not working" />
           </div>
         </div>
       </section>
