--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div id="aboutme">
           <div class="card">
             <img id= "myPic" src="./Assets/Images/me.JPG" alt="">
-            <p id = "myInfo" >Hi and welcome to my portfolio. I'm Julia Hanlon, a BIM expert, architect, and future web developer. I am currently a student at UC Berkeley studying full stack web development.</p>
+            <p id = "myInfo" >Hi and welcome to my portfolio. I have more than 10 years of experience in architecture and BIM Management. I am currently a student at UC Berkeley studying full stack web development and am thinking about a career change once this program is finished.</p>
             <br>
-            <p id = "myInfo">I'm originally from St. Louis, MO. I moved to San Francisco a year and a half ago after living in Tel Aviv for 7 years.</p>
+            <p id = "myInfo">I'm originally from St. Louis, MO. I moved to San Francisco a year and a half ago after living abroad for 7 years.</p>
           </div>
         </div>
         <div id="rowTitle" class="row">
@@ -53,7 +53,7 @@
         </div>
         <div id = "row" class="row">
           <div class="col-md-4 col-sm-12">
-            <a href="https://julhanlon.github.io/06-Weather-APP/"><img class = "portImg" src="./Assets/Images/weatherApp.PNG" alt="not working" /></a>
+            <a href="https://julhanlon.github.io/06-Weather-APP/" target="_blank"><img class = "portImg" src="./Assets/Images/weatherApp.PNG" alt="not working" /></a>
           </div>
           <div class="col-md-6 col-sm-12">
             <h3>Weather App</h3>
@@ -63,7 +63,7 @@
         </div>
         <div id = "row" class="row">
           <div class="col-md-4 col-sm-12">
-            <a href="https://julhanlon.github.io/05-Scheduler/"><img class = "portImg" src="./Assets/Images/WorkDayScheduler.PNG" alt="not working" /></a>
+            <a href="https://julhanlon.github.io/05-Scheduler/" target="_blank"><img class = "portImg" src="./Assets/Images/WorkDayScheduler.PNG" alt="not working" /></a>
           </div>
           <div class="col-md-6 col-sm-12">
             <h3>Daily Scheduler</h3>
@@ -91,7 +91,7 @@
             <img class = "portImg" src="./Assets/Images/oraniumByThe Sea.PNG" alt="not working" />
           </div>
         </div>
-        <div class="row">
+        <div id = "row" class="row">
           <div class="col-md-6 col-sm-12">
             <h3>Dan Towers</h3>
             <p><p>
@@ -100,7 +100,7 @@
             </p></p>
           </div>
           <div class="col-md-4 col-sm-12">
-            <img class = "portImg" src="./Assets/Images/DTowers.PNG" alt="" />
+            <img class = "portImg" src="./Assets/Images/DTowers.PNG" alt="not working" />
           </div>
         </div>
         <div id = "row" class="row">
